# clisay

./: .gitignore  Cargo.toml  LICENSE  README.md  expand.rs
benches/: alloc_gc.rs  alloc_gc.say  arrays.rs  arrays.say  deep_sum.rs  deep_sum.say  fib.rs  fib.say  fib39.say  fib47.say  loop.rs  loop.say  method_calls.rs  method_calls.say  strings.rs  strings.say
src/: debug_output.rs  lib.rs  main.rs
src/_tests/: file.rs  inline.rs  mod.rs
src/backend/: mod.rs
src/backend/assemble/: mod.rs
src/backend/bytecode/: chunk.rs  mod.rs  (+1 more)
src/bytecode/: chunk.rs  compiler.rs  gc.rs  mod.rs  objects.rs  operator.rs  parser.rs  vm.rs
src/compiler/: classes.rs  expressions.rs  functions.rs  mod.rs  statements.rs
src/core/: builtins.rs  gc.rs  host.rs  mod.rs  objects.rs  stack.rs  value.rs
src/frontend/: mod.rs
src/interpreter/: callable.rs  class.rs  environment.rs  expression.rs  function.rs  mod.rs  object.rs  resolver.rs  statement.rs  value.rs
src/lexer/: mod.rs  token.rs  token_stream.rs
src/middle/: mod.rs  signatures.rs
src/parser/: ast.rs  expression.rs  mod.rs  operator.rs  statement.rs  token_stream.rs
src/runtime/: calls.rs  chunk.rs  closures.rs  mod.rs  objects.rs  opcode.rs  ops.rs  properties.rs
src/vm/: chunk.rs  compiler.rs  gc.rs  mod.rs  objects.rs  opcode.rs  operator.rs  parser.rs  stack.rs  value.rs  vm.rs
test-utils/test-collector/: Cargo.toml  lib.rs
test-utils/test-macro/: Cargo.toml  lib.rs
tests/: bind.rs  classes.say  closures.say  compiler.say  file.rs  functions.say  inline.rs  lex.rs  lower.rs  nullck.rs  parse.rs  perf.say  resolve.rs
tests/arrays/: array_get_index.say  array_set_index.say
tests/assignment/: error_lvalue_class.say  error_lvalue_expr.say  error_lvalue_num.say  error_lvalue_str.say  lvalue_fn.say  lvalue_group.say
tests/classes/: error_assign_instance_method.say  error_super_param_count.say  field_hiding.say  instance_method_closures.say
tests/classes2/: inherit_fields.say  lexical_this.say  method_closures.say
tests/closures/: closes_over_locals.say  closes_over_variable.say
tests/common/: mod.rs
tests/functions/: params_fn.say  params_number.say
tests/gc/: locals.say  out_of_scope_fn.say  out_of_scope_locals.say  sizeof_string.say  string_collection.say
tests/operators/: error_add.say  error_div.say  error_mul.say  precedence.say
tests/parser/: empty_blocks.say
tests/scopes/: test.say
tests/super/: superclass_field.say  superclass_field_assign.say  superclass_inherited_method.say  superclass_method.say
(+468 files in other folders)
