[package]
name = "clisay"
version = "0.1.0"
edition = "2021"

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build_fib39 = "./scripts/build-and-run ./benches/fib39.say"

[dependencies]
anyhow = "1.0.96"
fnv = "1.0.7"
nohash-hasher = "0.2.0"
regex = "1.11.1"
rustc-hash = "2.1.1"

[dev-dependencies]
test-collector = { path = "./test-utils/test-collector" }
criterion = "0.5.1"
libtest-mimic = "0.8.1"
test-generator = "0.3.1"

[features]
default = []
capture_output = []

[profile.release]
debug = true

[[test]]
name = "file"
path = "tests/file.rs"
harness = false

[[bench]]
name = "fib"
harness = false

[[bench]]
name = "deep_sum"
harness = false
